[metadata]
name = pokemon_picnic
description = A Pokémon sandwich suggester
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Games/Entertainment
version = attr: pokemon_picnic.__version__

[options]
install_requires =
    numpy

package_dir =
    = src
packages = find:
python_requires = >=3.9.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    make-sandwich=pokemon_picnic.suggester.cli:main
