[metadata]
name = pokemon_gourmet
description = A Pokémon sandwich suggester
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Games/Entertainment
version = attr: pokemon_gourmet.__version__

[options]
install_requires =
    click
    griffe
    numpy
    pandas
    streamlit

package_dir =
    = src
packages = find:
python_requires = >=3.9.0
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gourmet=pokemon_gourmet.suggester.cli:main
    gourmet-gui=pokemon_gourmet.suggester.st:main
